initial db setup

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "description": "![Code badge](https://img.shields.io/github/languages/top/warrenp11/employee-tracker) \r ![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/warrenp11/employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^10.0.0",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.3-rc.0"
   }
